--- a/main.css
+++ b/main.css
@@ -20,6 +20,20 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "Estedad-ExtraBold";
+  src: url("./assets/fonts/Estedad-FD-ExtraBold.ttf");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Estedad-Regular";
+  src: url("./assets/fonts/Estedad-FD-Regular.ttf");
+  font-weight: normal;
+  font-style: normal;
+}
+
 /** Body */
 body {
   margin-top: 78px;
@@ -155,4 +169,238 @@ body {
 
 .header-details-first-text span:last-child {
   margin-left: auto;
+}
+
+/* Range Slider */
+.range-slider-container {
+  width: 1024px;
+  height: 326px;
+  background-color: #f2f2f0;
+  border-radius: 40px;
+  margin: 0 auto;
+  gap: 14px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.range-slider-container-top-section {
+  width: 976px;
+  height: 61px;
+  background-color: #ffffff;
+  border-radius: 16px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.range-slider-container-top-section-english-title span {
+  font-family: "Estedad-Bold";
+  font-size: 20px;
+  font-weight: bold;
+  color: #094020;
+}
+
+.range-slider-container-top-section-english-title {
+  padding-left: 22px;
+}
+
+.range-slider-container-top-section-persian-title {
+  padding-right: 22px;
+}
+
+.range-slider-container-top-section-persian-title span {
+  font-family: "Estedad-Bold";
+  font-size: 16px;
+  font-weight: bold;
+  color: #094020;
+}
+
+.range-slider-container-bottom-section {
+  width: 976px;
+  height: 208px;
+  background-color: #ffffff;
+  border-radius: 16px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.range-slider-container-bottom-section-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row-reverse;
+  gap: 3px;
+}
+
+.range-slider-container-bottom-section-text span {
+  font-family: "Estedad-Medium";
+  font-size: 16px;
+  color: #093f20;
+}
+
+.range-slider-container-bottom-section-text-number {
+  font-family: "Estedad-ExtraBold";
+  font-size: 40px;
+  color: #093f20;
+  margin-bottom: 11px;
+}
+
+.range-slider-container-bottom-section-helper-section {
+  position: relative;
+}
+
+.range-slider-container-bottom-section-helper-section:hover {
+  cursor: pointer;
+}
+
+.range-slider-container-bottom-section-helper-text {
+  width: 313px;
+  height: 136px;
+  background-color: #fff;
+  border-radius: 12px;
+  position: absolute;
+  bottom: 33px;
+  right: -145px;
+  box-shadow: -1px 0px 6px 1px #c9c9c9;
+
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(5px);
+  transition: 0.25s ease;
+  z-index: 10;
+}
+
+.range-slider-container-bottom-section-helper-text.active {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+
+.range-slider-container-bottom-section-helper-text-top-section {
+  height: 44px;
+  background-color: #dffca1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+  padding: 0px 8px;
+}
+
+.range-slider-container-bottom-section-helper-text-top-section span {
+  font-family: "Estedad-SemiBold";
+  font-size: 14px;
+  color: #093f20;
+}
+
+.range-slider-container-bottom-section-helper-text-bottom-section {
+  padding: 0px 8px;
+  text-align: end;
+  margin-top: 10px;
+}
+
+.range-slider-container-bottom-section-helper-text-bottom-section span {
+  font-family: "Estedad-Regular";
+  font-size: 12px;
+  color: #093f20;
+}
+
+.range-slider-container-bottom-section-helper-text-bottom-section-arrow {
+  position: absolute;
+  left: 50%;
+  bottom: -6px;
+  width: 0;
+  height: 0;
+  transform: translateX(-50%);
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid #fff;
+}
+
+.range-slider-container-bottom-section-text-image {
+  position: relative;
+}
+
+.range-slider-container-bottom-section-text-image:hover {
+  cursor: pointer;
+}
+
+.range-slider-container-bottom-section-slider-wrapper {
+  width: 871px;
+  height: 69px;
+  background-color: #dffca1;
+  border-radius: 16px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border: 1px solid #ededed;
+}
+
+.range-slider-container-bottom-section-slider-wrapper-bar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 5px;
+}
+
+.range-slider-container-bottom-section-slider-wrapper-tracker-section {
+  width: 798px;
+  height: 2px;
+  background: #fff;
+  border-radius: 122px;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: row;
+  align-items: center;
+}
+
+.range-slider-container-bottom-section-slider-wrapper-text {
+  font-family: "Estedad-Bold";
+  font-size: 14px;
+  color: #093f20;
+}
+
+.range-slider-container-bottom-section-slider-wrapper-separator-line span {
+  width: 6px;
+  height: 5px;
+  border-left: 1px solid #093f20;
+  opacity: 20%;
+  margin-left: 2px;
+}
+
+.range-slider-container-bottom-section-slider-wrapper-ticks,
+.range-slider-container-bottom-section-slider-wrapper-separator-line {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 705px;
+}
+
+.range-slider-container-bottom-section-slider-wrapper-ticks span {
+  font-family: "Estedad-Medium";
+  font-size: 12px;
+  color: #093f20;
+}
+
+.range-slider-container-bottom-section-slider-wrapper-tracker-section-bar {
+  width: 50px;
+  height: 2px;
+  background-color: #093f20;
+  border-radius: 122px;
+}
+
+.range-slider-container-bottom-section-slider-wrapper-tracker-section-thumb {
+  height: 12px;
+  width: 12px;
+  background: #00451e;
+  border-radius: 50%;
 }
